--- a/css/project.css
+++ b/css/project.css
@@ -1,128 +1,308 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Niramit');
+
 /* You must use a DIFFERENT FONT THAT THIS ONE as your webfont */
 
 /*************************************************
             DEFAULTS
 *************************************************/
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
+
 *::after,
-*::before{
+*::before {
     box-sizing: inherit;
 }
-html{
+
+html {
     font-size: 16px;
-    font-family: Roboto, Helvetica, Arial, sans-serif;
+    font-family: Niramit, Helvetica, Arial, sans-serif;
     /* change this font stack to your own choices */
     line-height: 1.5;
 }
-p{
-    
-}
-a{
-    
-}
-ul{
-    
-}
-ol{
-    
-}
-li{
-    
-}
-img{
+
+p {}
+
+a {}
+
+ul {}
+
+ol {}
+
+li {}
+
+img {
     width: 25%;
 }
 
 /*************************************************
             HEADER
 *************************************************/
-header{
-    padding:1rem 2rem;
+header {
+    background-image: url(../img/501.jpeg);
+    background-size: cover;
+    background-position: center;
+    border-top: 10px solid hsl(346, 84%, 40%);
+    padding: 1rem 2rem;
     color: black;
 }
-header > h1{
-    
+
+header > h1 {
+    color: hsl(346, 84%, 20%);
+    text-shadow: .5px .4px .7px hsl(346, 84%, 95%);
 }
-header > h2{
-    
+
+header > h2 {
+    color: hsl(346, 84%, 20%);
+    text-shadow: .5px .4px .7px hsl(346, 84%, 95%);
+
 }
+
 /*************************************************
             NAVMENU
 *************************************************/
-nav{
-    padding:1rem 2rem;
-}
+nav {}
+
 nav > a,
-nav > a:visited,
-nav > a:link{
-    
+nav > a,
+nav > a:link {
+    color: hsl(346, 84%, 95%);
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 1.3rem;
 }
+
+.mainnav {
+    height: auto;
+    background-color: hsl(346, 84%, 40%);
+    display: flex;
+    justify-content: space-around;
+    font-weight: bold;
+}
+
+.mainnav :hover {
+    color: hsl(346, 84%, 75%);
+}
+
 nav > a:active,
 nav > a:focus,
-nav > a:hover{
-    
-}
+nav > a:hover {}
 
 /*************************************************
             MAIN CONTENT
 *************************************************/
-main{
-    padding:1rem 2rem;
+main {
+    padding: 1rem 2rem;
+    margin: 1rem auto;
+    display: flex;
 }
-section{
-    
+
+.first {
+    color: hsl(346, 100%, 10%);
+    display: inline-grid;
+    overflow: scroll;
 }
-section p{
-    
+
+.first h1 {
+    color: hsl(346, 100%, 58%);
+    font-size: 1.4rem;
 }
-section p img{
-    
+
+.second,
+.third {
+    color: hsl(346, 100%, 10%);
+    font-size: 1rem;
+    overflow: auto;
+}
+
+.primary h2 {
+    color: hsl(346, 100%, 18%);
+}
+
+section {
+    margin: .5rem;
+}
+
+section p {}
+
+section p img {
+    margin: 0rem 1rem 0rem 0rem;
+    float: left;
+    height: auto;
+    width: 250px;
 }
 
 /*************************************************
             FOOTER
 *************************************************/
-footer{
-    padding:1rem 2rem;
+footer {
+    padding: 1rem 2rem;
+    border-top: 15px solid hsl(346, 84%, 40%);
+    background-color: hsl(346, 15%, 85%);
+
 }
-.foot nav{
-    
+
+.foot {}
+
+.foot nav {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
 }
-.foot section{
-    
+
+.foot section {
+    display: ;
 }
-.foot dl{
-    
+
+.foot dl {
+    flex-basis: 50%;
 }
-.foot dt{
-    
-}
-.foot dd{
-    
-}
+
+.foot dt {}
+
+.foot dd {}
+
 .foot dd a,
-.foot dd a:visited{
-    
+.foot dd a {
+    color: hsl(346, 93%, 41%);
+    text-decoration: none;
 }
+
 .foot dd a:active,
 .foot dd a:focus,
-.foot dd a:hover{
-    
+.foot dd a:hover {
+    text-decoration: none;
+    color: hsl(346, 11%, 58%);
 }
+
+.comments {}
+
 /*************************************************
             MEDIA QUERIES for layout
 *************************************************/
-@media (max-width: 599px){
-    
+@media screen and (max-width: 599px) {
+
+    nav > a,
+    nav > a,
+    nav > a:link {
+        color: hsl(346, 84%, 95%);
+        text-decoration: none;
+        text-transform: uppercase;
+        border-bottom: 1px solid hsl(346, 84%, 95%);
+        font-size: 1rem;
+
+    }
+
+    .mainnav {
+        height: auto;
+        background-color: hsl(346, 84%, 40%);
+        display: flex;
+        font-weight: bold;
+        flex-flow: column;
+        text-align: center;
+    }
+
+    .mainnav :hover {
+        color: hsl(346, 84%, 75%);
+    }
+
+    main {
+        padding: 1rem;
+        margin: 0rem;
+        display: block;
+    }
+
+    .first {
+        color: hsl(346, 100%, 10%);
+        display: inline-grid;
+        height: auto;
+        overflow: auto;
+        font-size: 1rem;
+    }
+
+    .first h1 {
+        color: hsl(346, 100%, 58%);
+        font-size: 1.5rem;
+        margin: 0rem 0rem 1rem 0rem;
+        border-left: 15px solid;
+    }
+
+    .second,
+    .third {
+        color: hsl(346, 100%, 10%);
+        font-size: 1rem;
+        height: auto;
+        overflow: auto;
+    }
+
+    .primary h2 {
+        color: hsl(346, 100%, 18%);
+        font-size: 1.4rem;
+        border-left: 15px solid hsl(346, 100%, 18%);
+        margin: 1rem 0rem 1rem 0rem;
+
+    }
+
+    section {
+        margin: .5rem;
+    }
+
+    section p {}
+
+    section p img {
+        margin: 0rem 1rem 0rem 0rem;
+        float: left;
+        height: auto;
+        width: auto;
+    }
 }
-@media (min-width: 600px) and (max-width:999px){
+
+
+@media (min-width:600px) and (max-width:999px) {
+    .primary {
+        font-size: 1.2rem;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas:
+            "a a"
+            "b c";
+        margin: 2rem 0;
+    }
+.first h1 {
+        color: hsl(346, 100%, 58%);
+        font-size: 1.5rem;
+        margin: 0rem 0rem 1rem 0rem;
+        border-left: 10px solid hsl(346, 100%, 58%);
+        background-color: hsl(346, 15%, 85%);
+    }
     
+    .primary h2 {
+        color: hsl(346, 100%, 18%);
+        font-size: 1.4rem;
+        margin: 1rem 0rem 1rem 0rem;
+        border-left: 10px solid hsl(346, 100%, 58%);
+        background-color: hsl(346, 15%, 85%);
+    }
+    .primary .first {
+        grid-area: a;
+        padding: 1rem;
+    }
+
+    .primary .second {
+        grid-area: b;
+        padding: 1rem;
+    }
+
+    .primary .third {
+        grid-area: c;
+        padding: 1rem;
+    }
+    section p img {
+        height: auto;
+        width: 300px;
+    }
 }
-@media (min-width: 1000px){
-    
-}
+
