--- a/css/project.css
+++ b/css/project.css
@@ -144,7 +144,15 @@ footer {
 
 }
 
-.foot {}
+.foot {
+    font-size: 1.2rem;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas:
+            "c c"
+            "a b";
+        margin: 2rem 0;
+}
 
 .foot nav {
     display: flex;
@@ -153,9 +161,7 @@ footer {
 
 }
 
-.foot section {
-    display: ;
-}
+.foot section {}
 
 .foot dl {
     flex-basis: 50%;
@@ -178,7 +184,21 @@ footer {
     color: hsl(346, 11%, 58%);
 }
 
-.comments {}
+.comments {
+
+}
+textarea{
+    height: 200px;
+    width: 400px;
+    background-color: hsl(346, 40%, 80%);
+}
+#btnSend{
+    border: 1px solid ;
+    border-radius: 10px;
+    background-color:hsl(346, 12%, 40%) ;
+    color: hsl(346, 100%, 100%);
+    padding: 3px;
+}
 
 /*************************************************
             MEDIA QUERIES for layout
@@ -258,6 +278,40 @@ footer {
         height: auto;
         width: auto;
     }
+
+   .foot {
+        display: inherit;
+     
+}
+    .docs{
+        padding-bottom: 1rem;
+    }
+    .foot nav {
+        text-align: center;
+        display: inherit;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .foot section {}
+
+    .foot dl {
+    }
+    .comments{
+        text-align: center;
+    }
+textarea{
+    height: auto;
+    width: 300px;
+}
+#btnSend{
+    border: 1px solid ;
+    border-radius: 10px;
+    background-color:hsl(346, 12%, 40%) ;
+    color: hsl(346, 100%, 100%);
+    padding: 3px;
+}
+
 }
 
 
@@ -271,21 +325,24 @@ footer {
             "b c";
         margin: 2rem 0;
     }
-.first h1 {
+
+    .first h1 {
         color: hsl(346, 100%, 58%);
         font-size: 1.5rem;
         margin: 0rem 0rem 1rem 0rem;
         border-left: 10px solid hsl(346, 100%, 58%);
         background-color: hsl(346, 15%, 85%);
     }
-    
+
     .primary h2 {
+
         color: hsl(346, 100%, 18%);
         font-size: 1.4rem;
         margin: 1rem 0rem 1rem 0rem;
         border-left: 10px solid hsl(346, 100%, 58%);
         background-color: hsl(346, 15%, 85%);
     }
+
     .primary .first {
         grid-area: a;
         padding: 1rem;
@@ -300,9 +357,14 @@ footer {
         grid-area: c;
         padding: 1rem;
     }
+
     section p img {
         height: auto;
         width: 300px;
     }
-}
+    textarea{
+    height: 200px;
+    width: 300px;
+    background-color: hsl(346, 40%, 80%);
 
+}
